--- a/.github/workflows/hms-ui.yml
+++ b/.github/workflows/hms-ui.yml
@@ -24,7 +24,7 @@ jobs:
           password: ${{secrets.DOCKER_PASSWORD}}
 
       - name: Build and push
-        uses: docker/build-push-action@v4
+        uses: docker/login-action@v2
         with:
           context: .
           push: true
