--- a/.github/workflows/hms-ui.yml
+++ b/.github/workflows/hms-ui.yml
@@ -20,8 +20,8 @@ jobs:
       - name: login to hub
         uses: docker/login-action@v2
         with:
-          DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push
         uses: docker/login-action@v2
