--- a/.github/workflows/hms-app.yml
+++ b/.github/workflows/hms-app.yml
@@ -22,6 +22,7 @@ jobs:
       #   run: echo "${{ secrets.LOCAL_REGISTRY_PASSWORD }}" | docker login localhost:5000 -u ${{ secrets.LOCAL_REGISTRY_USER }} --password-stdin
 
       - name: Build and Push Docker Image
+        uses: docker/build-push-action@v3
         with:
           push: true
           tags: localhost:5000/hms-app01:latest
