--- a/.github/workflows/hms-ui.yml
+++ b/.github/workflows/hms-ui.yml
@@ -1,45 +1,35 @@
-# This is a basic workflow to help you get started with Actions
-
-name: Build & Deploy HMS-UI
+name: Build and Push to Local Registry
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
-      attestations: write
-      id-token: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: login to hub
-        uses: docker/login-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          driver-opts: network=host
+      
+      # - name: Log in to Local Docker Registry
+      #   run: echo "${{ secrets.LOCAL_REGISTRY_PASSWORD }}" | docker login localhost:5000 -u ${{ secrets.LOCAL_REGISTRY_USER }} --password-stdin
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v3
         with:
-          images: my-docker-hub-namespace/my-docker-hub-repository
-
-      - name: Build and push Docker image
-        id: push
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-        with:
-          context: .
-          file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: localhost:5000/hms-app01:latest
+
+      - name: deploy
+        run: |
+          docker pull localhost:5000/hms-app01:latest
+          docker stop hms-app-container || true
+          docker rm hms-app-container || true
+          docker run -d --name hms-app-container -p 3000:3000 localhost:5000/hms-app01:latest
