--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,26 +12,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    # steps:
-    # - uses: actions/checkout@v4
-    # - name: Build the Docker image
-    #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: network=host
-      
-      - name: Build and push to local registry
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          tags: localhost:3000/name/app:latest
-      
-      - name: Inspect
-        run: |
-          docker buildx imagetools inspect localhost:3000/name/app:latest
+    - uses: actions/checkout@v4
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
