--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       
@@ -33,4 +36,4 @@ jobs:
 
       - name: Run Docker container
         run: |
-          docker run -d --name hms-ui -p 8080:80 localhost:3000/name/app:latest
+          docker run -d --name hms-ui -p 8081:80 localhost:3000/name/app:latest
