--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,50 +1,35 @@
-name: Docker Image CI and Deploy
+name: Build and Push Docker Image
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ "main" ]
-  # pull_request:
-  #   branches: [ "main" ]
-  workflow_dispatch: {}
+    branches: [ main ]
 
 jobs:
-
-  build-and-deploy:
-
+  build-and-push:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Start local Docker registry
-        run: |
-          docker run -d -p 3000:5000 --name registry registry:2 || echo "Registry already running"
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          driver-opts: network=host
-      
-      - name: Build and push to local registry
-        uses: docker/build-push-action@v6
+          registry: ghcr.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.ACCESS_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
         with:
+          context: .
           push: true
-          tags: localhost:3000/name/app:latest
-      
-      - name: Inspect
-        run: |
-          docker buildx imagetools inspect localhost:3000/name/app:latest
-
-      - name: Run Docker container
-        run: |
-          docker run -d --name hms-ui -p 8081:80 localhost:3000/name/app:latest
-
-      # - name: Stop and remove local Docker registry
-      #   if: always()
-      #   run: |
-      #     docker stop registry || true
-      #     docker rm registry || true
+          tags: ghcr.io/${{ secrets.DOCKER_USERNAME }}/hms-app:1.0
