--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,3 +33,12 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
+          labels: |
+            org.opencontainers.image.title="hms-app"
+
+      - name: Docker pull  image and run container
+        run: |
+          docker pull ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
+          docker run -d --name hms-app-container -p 3003:3000 ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
+          docker ps -a
+          docker logs hms-app-container
