--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,6 +41,10 @@ jobs:
         id: set-tag
         run: echo "TAG=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
 
+      - name: Login to GitHub Container package
+        run: |
+          echo "${{ secrets.ACCESS_TOKEN }}" | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+
       - name: Docker pull  image and run container
         run: |
           #docker pull ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
