--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -45,10 +45,21 @@ jobs:
         run: |
           echo "${{ secrets.ACCESS_TOKEN }}" | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Docker pull  image and run container
+      - name: docker run container
         run: |
-          #docker pull ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
-          #docker tag ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0 ghcr.io/${{ vars.HMS_REPO }}/hms-app:${TAG}
-          docker run -d --name hms-app-container -p 3003:3000 ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
+          docker run -d --name hms-app-container --restart unless-stopped -p 3000:3000 ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
           # docker ps -a
+          # docker logs hms-app-container
+      # - name: Stop and remove existing app container if exists
+      #   run: |
+      #     docker stop hms-app-container || true
+      #     docker rm hms-app-container || true
+      # - name: Pull image from local registry
+
+      # - name: Docker pull  image and run container
+      #   run: |
+      #     #docker pull ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
+      #     #docker tag ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0 ghcr.io/${{ vars.HMS_REPO }}/hms-app:${TAG}
+      #     docker run -d --name hms-app-container --restart unless-stopped -p 3003:3000 ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
+      #     # docker ps -a
           # docker logs hms-app-container
