--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,19 +27,28 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.ACCESS_TOKEN }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
-          labels: |
-            org.opencontainers.image.title="hms-app"
-            org.opencontainers.image.source="https://github.com/boggavacs/HMS-APP"
+      # - name: Build and push Docker image
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: .
+      #     push: true
+      #     tags: ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
+      #     labels: |
+      #       org.opencontainers.image.title="hms-app"
+      #       org.opencontainers.image.source="https://github.com/boggavacs/HMS-APP"
+
+      - name: docker push image
+        run: |
+          docker tag ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0 ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
+          docker push ghcr.io/${{ vars.HMS_REPO }}/hms-app:latest
+
+      - name: docker pull image
+        run: |
+          docker pull ghcr.io/${{ vars.HMS_REPO }}/hms-app:latest
 
       - name: docker build
         run: |
-          docker build -t ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0 .
+          docker build -t ghcr.io/${{ vars.HMS_REPO }}/hms-app:latest .
 
       # - name: Set dynamic Tag
       #   id: set-tag
@@ -49,11 +58,11 @@ jobs:
       #   run: |
       #     echo "${{ secrets.ACCESS_TOKEN }}" | docker login ghcr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: docker run container
-        run: |
-          docker run -d --name hms-app-container --restart unless-stopped -p 3000:3000 ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
-          # docker ps -a
-          # docker logs hms-app-container
+      # - name: docker run container
+      #   run: |
+      #     docker run -d --name hms-app-container --restart unless-stopped -p 3000:3000 ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
+      #     # docker ps -a
+      #     # docker logs hms-app-container
       # - name: Stop and remove existing app container if exists
       #   run: |
       #     docker stop hms-app-container || true
