--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,29 +27,29 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.ACCESS_TOKEN }}
 
-      # - name: Build and push Docker image
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     context: .
-      #     push: true
-      #     tags: ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
-      #     labels: |
-      #       org.opencontainers.image.title="hms-app"
-      #       org.opencontainers.image.source="https://github.com/boggavacs/HMS-APP"
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
+          labels: |
+            org.opencontainers.image.title="hms-app"
+            org.opencontainers.image.source="https://github.com/boggavacs/HMS-APP"
 
-      - name: docker build
-        run: |
-          docker build -t ghcr.io/${{ vars.HMS_REPO }}/hms-app:latest .
+      # - name: docker build
+      #   run: |
+      #     docker build -t ghcr.io/${{ vars.HMS_REPO }}/hms-app:latest .
 
-      - name: docker push image
-        run: |
-          docker tag ghcr.io/${{ vars.HMS_REPO }}/hms-app:latest ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
-          docker push ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
-          docker push ghcr.io/${{ vars.HMS_REPO }}/hms-app:latest
+      # - name: docker push image
+      #   run: |
+      #     docker tag ghcr.io/${{ vars.HMS_REPO }}/hms-app:latest ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
+      #     docker push ghcr.io/${{ vars.HMS_REPO }}/hms-app:1.0
+      #     docker push ghcr.io/${{ vars.HMS_REPO }}/hms-app:latest
 
-      - name: docker pull image
-        run: |
-          docker pull ghcr.io/${{ vars.HMS_REPO }}/hms-app:latest
+      # - name: docker pull image
+      #   run: |
+      #     docker pull ghcr.io/${{ vars.HMS_REPO }}/hms-app:latest
 
 
       # - name: Set dynamic Tag
