--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     ports:
       - "3003:3000"
     environment:
+    - NEXT_TELEMETRY_DISABLED=1
       - NODE_ENV=production
     command: /bin/sh -c "npm install --include=dev && npm run build && npm start"
 
