--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - NEXT_TELEMETRY_DISABLED=1
       - NODE_ENV=production
+    hostname: hms.ro
     command: /bin/sh -c "npm install --include=dev && npm run build && npm start"
 
 volumes:
