--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@heroui/button": "^2.2.19",
     "@heroui/navbar": "^2.2.17",
     "@heroui/react": "^2.7.8",
     "@heroui/system": "^2.4.15",
     "@heroui/theme": "^2.4.15",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "framer-motion": "^12.15.0",
     "next": "15.3.2",
     "react": "^19.1.0",
