--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@heroui/button": "^2.2.19",
+    "@heroui/input": "^2.4.21",
     "@heroui/navbar": "^2.2.17",
     "@heroui/react": "^2.7.8",
-    "@heroui/system": "^2.4.15",
-    "@heroui/theme": "^2.4.15",
+    "@heroui/system": "^2.4.17",
+    "@heroui/theme": "^2.4.17",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "framer-motion": "^12.15.0",
